@startuml

' Centro Comercial
class ShoppingCenter {
    - openigTime : String
    - closingTime : String
    - name : String
    - address : String
    - parkingLot : ParkingLot
    - shops : ArrayList<Shop>
    + addShop(Shop shop): void
    + removeShop(shop shop): void
    - generateReport(): Report
}

' Entidades Gestion Locales
'Local
class Shop {
    - id : int
    - name : String 
    - category : String 
    - area : double
    - location : String
    - rentPrice: double
    - status : String
    - maintenances : ArrayList<Maintenance>
    + rent() : void 
    + release(): void
}

' Contrato Alquiler
class RentalContract {
    - idContrat : int
    - renterShop : Shop
    - startDate : Date
    - endDate : Date
    - renter : Renter
    - amount : double
    - payments : ArrayList<Payment>
    + renewContract(Date endDate): void
    + cancelContract(): void
}

' Pagos
class Payment {
    - id : int
    - date : Date
    - amount : double
    - paymentMethod : String
    - rentalContract : RentalContract
    - invoice : Invoice
}

' Arrendatario
class Renter {
    - id : int
    - name : String
    - phone : String
    - email : String
    - rentalContracts : ArrayList<RentalContract>
    - payments: ArrayList<Payment>
    - invoices : ArrayList<Invoice>
}

' Factura
class Invoice {
    - id: int
    - totalAmount: double 
    - issueDate: Date
    - details: String
    + generateInvoice(): void
    + payInvoice(): void
}

' Reporte
class Report {
    ' tipo: General, Pagos, Facturas, arrendatario, Local, contrato, Mantenimiento
    - id : int
    - type: String 
    - issueDate : Date
    - content: String
    + generateReport(): void
    + viewReport(): void
}

' Mantenimiento
class Maintenance {
    - idMaintenance: int
    - type: String
    - scheduledDate : Date
    - shop: Shop
    - costAmount : double
    + Schedule(): void
    + carryout(): void
}

' Entidades Gestion Parqueadero
'Parqueadero
class ParkingLot {
    - location: String
    - totalCapacity : int
    - cubicles : ArrayList<Cubicle>
    - parkingFees : ArrayList<ParkingFee>
    + seeDisponibility() void
    + assignCubicle(Vehicle vehicle): void
    + releasedCubicle(Cubicle cubicle) : void
}

' Cubiculo
class Cubicle {
    - id: int
    - type: String
    - status: String
    + take() : void
    + release() : void
}

' Vehiculo
class Vehicle {
    - licensePlate : String
    - type: String
    - ownerName : String
    - description: String
    - entryTime : Date
    - departureTime : Date
    + calcFeeToPay() : double
}


' Tiket
class Ticket {
    - id: int
    - entryTime : Date
    - departureTime : Date
    - totalAmount : double
    - paymentStatus : String
}

' Tarifa
class ParkingFee {
    - idFee : int
    - amountPerHours : double
    - vehicleType : string
}    

' Usuario
class User {
    # id : int
    # name : String
    # phone : String
    # email : String
    # address : String
}

' Administrador 
class Administrator {
    - username: String
    - password : String
}
' Relaciones 

' Herencia
User <|-- Administrator 

' Asociacion
Shop "*" -- "1" Renter : Arrendado a
RentalContract "*" -- "1" Shop : alquilar
RentalContract "*" -- "1" Renter : contratar


' Relación entre Invoice y Client
Invoice --> Renter : "emitida a"

Invoice "*" -- "1" Shop: factura

' Relación entre Reporte y Administrator
Report --> Administrator : "generado por"

' Relación entre Mantenimiento y Shop
Maintenance --> Shop : "realizado en"

RentalContract o-- "0..*" Payment : tiene

Payment "1" -- "1" Invoice : genera

Renter "1" -- "*" Payment : realiza


' Relación entre Cubicle y Vehicle
Cubicle --> Vehicle : "ocupado por"
Cubicle --> Ticket : tiene


' Composicion
ParkingLot "1" --o "n" Cubicle: tener >
ParkingLot "1" *-- "*" ParkingFee : Disponer
ShoppingCenter "1" --o "n" Shop : tener
ShoppingCenter *-- "*" Shop : Esta compuesto por
ShoppingCenter *-- "1..*" ParkingLot : Esta compuesto por
ShoppingCenter "1" -- "*" Administrator : tiene

@enduml
